--- a/src/pages/tab1/tab1.scss
+++ b/src/pages/tab1/tab1.scss
@@ -1,3 +1,47 @@
-page-tab1 {
+.button {
+	background-color: #4FAADF;
+	border: none;
+	color: white;
+	padding: 20px 20px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+}
 
+.roundButton {
+	border-radius: 200%;
+	padding: 20px 20px;
+
+}
+
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;
+}
+
+p {
+margin-bottom: 50px;
+padding-bottom: 50px;
 }
